NEW239811
[WebIDL] SelectedOptions and DataListOptions collections shouldn't be invalidated on change of any attribute
https://bugs.webkit.org/show_bug.cgi?id=239811
Summary [WebIDL] SelectedOptions and DataListOptions collections shouldn't be invalid...
Alexey Shvayka
Reported 2022-04-27 08:28:46 PDT
DocApplets cares only about "type" and "value" attributes, SelectedOptions should invalidate on "selected" only, while DataListOptions shouldn't invalidate on attribute change at all.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-05-04 08:29:11 PDT
Alexey Shvayka
Comment 2 2022-12-01 14:30:20 PST
Ahmad Saleem
Comment 3 2023-06-14 07:52:14 PDT
It seems this change didn't landed despite being reviewed, it would need rebase and might fixing failing test cases. Just wanted to highlight. Thanks!
Alexey Shvayka
Comment 4 2023-06-14 10:04:45 PDT
(In reply to Ahmad Saleem from comment #3) > It seems this change didn't landed despite being reviewed, it would need > rebase and might fixing failing test cases. Just wanted to highlight. Thanks! Thank you for the ping Ahmad, will make sure to land it over the weekend.
Ahmad Saleem
Comment 5 2023-08-27 05:51:54 PDT
(In reply to Alexey Shvayka from comment #4) > (In reply to Ahmad Saleem from comment #3) > > It seems this change didn't landed despite being reviewed, it would need > > rebase and might fixing failing test cases. Just wanted to highlight. Thanks! > > Thank you for the ping Ahmad, will make sure to land it over the weekend. Hi Alexey, sorry - I was just tracking some old ones and it seems this didn't landed. Hope you don't mind. :-)
Note You need to log in before you can comment on or make changes to this bug.