[WebIDL] SelectedOptions and DataListOptions collections shouldn't be invalidated on change of any attribute https://bugs.webkit.org/show_bug.cgi?id=239811

Reviewed by NOBODY (OOPS!).

SelectedOptions collection matches elements based on *selectedness* [1], which is affected
only by "selected" content attribute and only before user interacts with <select>.
DataListOptions collection matches elements merely by tag name [2].

No behavior change, just a speed-up.

[1] https://html.spec.whatwg.org/multipage/form-elements.html#concept-option-selectedness
[2] https://html.spec.whatwg.org/multipage/form-elements.html#dom-datalist-options

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/select-selectedOptions-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/select-selectedOptions.html:
* Source/WebCore/dom/Document.h:
* Source/WebCore/dom/LiveNodeList.h:
(WebCore::shouldInvalidateTypeOnAttributeChange):
* Source/WebCore/html/HTMLCollection.cpp:
(WebCore::invalidationTypeExcludingIdAndNameAttributes):