Source/WebCore/dom/Document.h
@@ -298,6 +298,7 @@ enum NodeListInvalidationType {
     InvalidateOnForTypeAttrChange,
     InvalidateForFormControls,
     InvalidateOnHRefAttrChange,
+    InvalidateOnSelectedAttrChange,
     InvalidateOnAnyAttrChange,
 };
 const int numNodeListInvalidationTypes = InvalidateOnAnyAttrChange + 1;
